# channel

./: .gitattributes  .gitignore  =python  README.md  pytest.ini  requirements.txt  setup.cfg
infra/db/: alembic.ini
infra/db/alembic/: env.py
infra/db/alembic/versions/: 10326dea71ec_create_user_token.py  2d9d114ba8de_add_default_user.py  82555ec1294d_init.py  ba38ac934d70_create_signups.py
src/channel/: __init__.py
src/channel/adapter/controller/: handler.py  input_parser.py
src/channel/adapter/controller/channel/: __init__.py  channel_create_controller.py  channel_delete_controller.py  channel_list_controller.py  channel_update_controller.py
src/channel/adapter/controller/device/: __init__.py  device_authenticate_controller.py  device_create_controller.py  device_delete_controller.py  device_list_controller.py
src/channel/adapter/controller/record/: __init__.py  record_create_controller.py  record_list_controller.py
src/channel/adapter/controller/user/: __init__.py  (+5 more)
src/channel/adapter/presenter/: renderer.py
src/channel/driver/: env.py
src/channel/entity/: models.py
src/channel/usecase/: exception.py  models.py
tests/: conftest.py
tests/channel/: factories.py
tests/channel/usecase/: models_test.py
utils/: generate.py  generate_csv.py  hash_check.py
utils/templates/src/adapter/: gateway.txt  presenter.txt  repository.txt  view.txt
utils/templates/src/usecase/: interactor.txt  repository.txt
utils/templates/tests/adapter/: controller.txt  gateway.txt  presenter.txt  view_impl.txt
utils/templates/tests/usecase/: interactor.txt
(+530 files in other folders)
