[metadata]
name = channel
version = attr: src.channel._version.__version__
package_dir = {: src},

[options]
packages = find:
install_requires =
    sqlalchemy
    pydantic
    passlib
    python-jose
    boto3
    setuptools
    email-validator
    PyMySQL
    bcrypt
    crhelper
package_dir =
     = src

[options.packages.find]
where = src
exclude = tests;infra; dist
